1_FCIDUMP/1_FCIDUMP_final/mySimul/00000_slurmFCI.out
bash: cannot set terminal process group (-1): Inappropriate ioctl for device
bash: no job control in this shell
 
:: initializing oneAPI environment ...
   bash: BASH_VERSION = 5.0.17(1)-release
   args: Using "$@" for setvars.sh arguments: --force
:: advisor -- latest
:: ccl -- latest
:: compiler -- latest
:: dal -- latest
:: debugger -- latest
:: dev-utilities -- latest
:: dnnl -- latest
:: dpcpp-ct -- latest
:: dpl -- latest
:: inspector -- latest
:: ipp -- latest
:: ippcp -- latest
:: itac -- latest
:: mkl -- latest
:: mpi -- latest
:: tbb -- latest
:: vtune -- latest
:: oneAPI environment initialized ::
 
/home/amychoi7/programs/anaconda/envs/pyscf
Unloading jmol-16.1.47
  ERROR: No such file or directory on
    '/usr/share/modules/modulefiles/jmol-16.1.47'
ERROR: Unable to locate a modulefile for 'pyscf'
Currently Loaded Modulefiles:
 1) jmol-16.1.47  
  File "00000_defaultMain.py", line 57
    mychkfile =  './output/'+myfilestr+'_hs_bp86_MCSCF_'+mymolstr+'_'+myactOE'.chk' # TODO
                                                                                  ^
SyntaxError: invalid syntax
